--- a/qemu_arm_blog.html
+++ b/qemu_arm_blog.html
@@ -35,7 +35,7 @@ asciidoc.install(2);
 <div class="row-fluid">
 <div class="span3">
 <div id="article_nav" class="row-fluid">
-<ul id="toc" class="nav nav-list" data-spy="affix" data-offset-top="200">
+<ul id="toc" class="nav nav-list bs-docs-sidenav" data-spy="affix" data-offset-top="200">
   <li id="toctitle" class="nav-header">Table of Contents</li>
   <noscript><p><b>JavaScript must be enabled in your browser to display the table of contents.</b></p></noscript>
 </ul>
