--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 		<p><b>JavaScript must be enabled in your browser 
 		  to display post lists contents.</b></p></noscript>
 </div>
-<div id="page" data-curpage="0">
+<div id="page">
 <ul class="pager">
-  <li><a id="previous" href="#">Previous</a></li>
-  <li><a id="next" href="#">Next</a></li>
+  <li><a id="previous" href="javascript:;">Previous</a></li>
+  <li><a id="next" href="javascript:;">Next</a></li>
 </ul>
 </div>
 	  </div>
