change server ip and regenerate demo blog page
Signed-off-by: WEN Pingbo <wengpingbo@gmail.com>

--- a/qemu_arm_blog.html
+++ b/qemu_arm_blog.html
@@ -7,11 +7,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>利用qemu模拟嵌入式系统制作全过程</title>
-<link href="http://192.168.1.109/css/bootstrap.min.css" rel="stylesheet" media="screen">
-<link href="http://192.168.1.109/css/main.css" rel="stylesheet">
+<link href="http://202.201.0.164/blog/css/bootstrap.min.css" rel="stylesheet" media="screen">
+<link href="http://202.201.0.164/blog/css/main.css" rel="stylesheet">
 
 
-<script type="text/javascript" src="http://192.168.1.109/js/asciidoc.js"></script>
+<script type="text/javascript" src="http://202.201.0.164/blog/js/asciidoc.js"></script>
 <script type="text/javascript">
 /*<![CDATA[*/
 asciidoc.install(2);
@@ -492,7 +492,7 @@ Last updated 2013-10-29 16:42:07 CST
 </div>
 </div>
 <script src="http://code.jquery.com/jquery.js"></script>
-<script src="http://192.168.1.109/js/bootstrap.min.js"></script>
+<script src="http://202.201.0.164/blog/js/bootstrap.min.js"></script>
 <script>
 $("#blognav").load("core/nav.inc");
 </script>
