add comment plugin in article page
Signed-off-by: WEN Pingbo <wengpingbo@gmail.com>

--- a/qemu_arm_blog.html
+++ b/qemu_arm_blog.html
@@ -40,7 +40,7 @@ asciidoc.install(2);
   <noscript><p><b>JavaScript must be enabled in your browser to display the table of contents.</b></p></noscript>
 </ul>
 </div>
-<div id="article_commnet" class="row-fluid"> Comment </div>
+<div id="article_commnet" class="row-fluid"></div>
 </div>
 <div class="span9" id="content">
 <div id="preamble">
@@ -488,7 +488,7 @@ http://www.gnu.org/software/src-highlite -->
 <div id="footer" class="container">
 <div id="footer-text" class="pull-right">
 Created by Pingbo Wen, all rights reserved. <br />
-Last updated 2013-10-29 16:42:07 CST
+Last updated 2013-11-10 11:35:51 CST
 </div>
 </div>
 <script src="http://code.jquery.com/jquery.js"></script>
