fix spell error in template
Signed-off-by: WEN Pingbo <wengpingbo@gmail.com>

--- a/qemu_arm_blog.html
+++ b/qemu_arm_blog.html
@@ -40,7 +40,7 @@ asciidoc.install(2);
   <noscript><p><b>JavaScript must be enabled in your browser to display the table of contents.</b></p></noscript>
 </ul>
 </div>
-<div id="article_commnet" class="row-fluid"></div>
+<div id="article_comment" class="row-fluid"></div>
 </div>
 <div class="span9" id="content">
 <div id="preamble">
