using blog.js in article page
Signed-off-by: WEN Pingbo <wengpingbo@gmail.com>

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Recent Comment
 	</div>
 </div>
 	<!-- footer -->
-<div id="footer_hook">
+<div id="footer_hook" class="container">
 	  <noscript>
 		<p><b>JavaScript must be enabled in your browser 
 		  to display footer contents.</b></p></noscript>
