--- a/qemu_arm_blog.html
+++ b/qemu_arm_blog.html
@@ -485,16 +485,12 @@ http://www.gnu.org/software/src-highlite -->
 </div> <!-- row-fluid -->
 </div> <!-- container -->
 
-<div id="footer" class="container">
-<div id="footer-text" class="pull-right">
-Created by Pingbo Wen, all rights reserved. <br />
+<div id="footer_hook" class="container pull-right">
 Last updated 2013-11-10 11:35:51 CST
-</div>
+<br />
 </div>
 <script src="http://code.jquery.com/jquery.js"></script>
 <script src="http://202.201.0.164/blog/js/bootstrap.min.js"></script>
-<script>
-$("#blognav").load("core/nav.inc");
-</script>
+<script src="http://202.201.0.164/blog/js/blog.js"></script>
 </body>
 </html>
