change nav hook in article page
Signed-off-by: WEN Pingbo <wengpingbo@gmail.com>

--- a/qemu_arm_blog.html
+++ b/qemu_arm_blog.html
@@ -22,7 +22,11 @@ asciidoc.install(2);
 
 </head>
 <body class="article" data-spy="scroll" data-target="#article_nav">
-<div id="blognav"></div>
+<div id="nav_hook">
+          <noscript>
+                <p><b>JavaScript must be enabled in your browser
+                  to display nav bar contents.</b></p></noscript>
+</div>
 <div id="header_bg" class="container-fluid">
 <div id="header" class="container">
 <h1>利用qemu模拟嵌入式系统制作全过程</h1>
