--- a/qemu_arm_blog.html
+++ b/qemu_arm_blog.html
@@ -489,9 +489,11 @@ http://www.gnu.org/software/src-highlite -->
 </div> <!-- row-fluid -->
 </div> <!-- container -->
 
-<div id="footer_hook" class="container pull-right">
+<div id="footer_hook" class="container">
+<div id="footer-text" class="pull-right">
 Last updated 2013-11-10 11:35:51 CST
 <br />
+</div>
 </div>
 <script src="http://code.jquery.com/jquery.js"></script>
 <script src="http://202.201.0.164/blog/js/bootstrap.min.js"></script>
