pull-right footer in index page
Signed-off-by: WEN Pingbo <wengpingbo@gmail.com>

--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@ Recent Comment
 </div>
 	<!-- footer -->
 <div id="footer_hook" class="container">
+  <div id="footer-text" class="pull-right">
 	  <noscript>
 		<p><b>JavaScript must be enabled in your browser 
 		  to display footer contents.</b></p></noscript>
+  </div>
 </div>
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
