change footer-text to footer_text
Signed-off-by: WEN Pingbo <wengpingbo@gmail.com>

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Recent Comment
 </div>
 	<!-- footer -->
 <div id="footer_hook" class="container">
-  <div id="footer-text" class="pull-right">
+  <div id="footer_text" class="pull-right">
 	  <noscript>
 		<p><b>JavaScript must be enabled in your browser 
 		  to display footer contents.</b></p></noscript>
