--- a/qemu_arm_blog.html
+++ b/qemu_arm_blog.html
@@ -490,7 +490,7 @@ http://www.gnu.org/software/src-highlite -->
 </div> <!-- container -->
 
 <div id="footer_hook" class="container">
-<div id="footer-text" class="pull-right">
+<div id="footer_text" class="pull-right">
 Last updated 2013-11-10 11:35:51 CST
 <br />
 </div>
