change comment plugin width
Signed-off-by: WEN Pingbo <wengpingbo@gmail.com>

--- a/qemu_arm_blog.html
+++ b/qemu_arm_blog.html
@@ -482,10 +482,9 @@ http://www.gnu.org/software/src-highlite -->
 <div class="paragraph"><p>到这里，我们最终完成了qemu&#8201;&#8212;&#8201;&gt; uboot -&#8594; kernel -&#8594; initramfs -&#8594; hda.img这一过程 <span class="footnote"><br>[<a href="http://elinux.org/Virtual_Development_Board">http://elinux.org/Virtual_Development_Board</a>]<br></span> 。而这也是制作嵌入式系统，甚至一个桌面发行版本的基本流程。如果看完这篇文章后，还对嵌入式系统念念不忘，还是建议你买一块开发板，然后真真走一遍这个过程，毕竟这是用qemu模拟的。现在有很多open source hardware project(Arduino, Beagle Board, Cubieboard，Odroid，PandaBoard，Raspberry Pi)，你可以购买他们的板子，然后移植任何自己喜欢的东西。由于是open source，你可以获取到很多资料，并且有社区支持。</p></div>
 </div>
 </div>
-</div>
-<div id="footnotes" class="span9 pull-right"><hr></div>
-<div id="article_comment" class="row-fluid"></div>
 </div> <!-- span9 content -->
+<div id="footnotes" class="span9 pull-right"><hr></div>
+<div id="article_comment" class="span9 pull-right"></div>
 </div> <!-- row-fluid -->
 </div> <!-- container -->
 
