add top comment and notice module
Signed-off-by: WEN Pingbo <wengpingbo@gmail.com>

--- a/index.html
+++ b/index.html
@@ -32,11 +32,9 @@
 </div>
 	  </div>
 	  <div class="span3">
-		<div class="row-fluid">
-Top Article
+		<div id="announcement" class="well well-small row-fluid">
 		</div>
-		<div class="row-fluid">
-Recent Comment
+		<div id="top_comment" class="row-fluid">
 		</div>
 	  </div>
 	</div>
