change announcement style
Signed-off-by: WEN Pingbo <wengpingbo@gmail.com>

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </div>
 	  </div>
 	  <div class="span3">
-		<div id="announcement" class="well well-small row-fluid">
+		<div id="announcement" class="row-fluid">
 		</div>
 		<div id="top_comment" class="row-fluid">
 		</div>
