--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </div>
 	  </div>
 	  <div class="span3">
-		<div id="announcement" class="row-fluid">
+		<div id="announcement">
 		</div>
 		<div id="top_comment" class="row-fluid">
 		</div>
