modularize css style
Signed-off-by: WEN Pingbo <wengpingbo@gmail.com>

--- a/qemu_arm_blog.html
+++ b/qemu_arm_blog.html
@@ -8,7 +8,8 @@
 
 <title>利用qemu模拟嵌入式系统制作全过程</title>
 <link href="http://202.201.0.164/blog/css/bootstrap.min.css" rel="stylesheet" media="screen">
-<link href="http://202.201.0.164/blog/css/main.css" rel="stylesheet">
+<link href="http://202.201.0.164/blog/css/global.css" rel="stylesheet">
+<link href="http://202.201.0.164/blog/css/article.css" rel="stylesheet">
 
 
 <script type="text/javascript" src="http://202.201.0.164/blog/js/asciidoc.js"></script>
