add install.py script, change config.yaml
Signed-off-by: WEN Pingbo <wengpingbo@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,56 +1,88 @@
 <!DOCTYPE html>
 <html>
-  <head>
-	<title>Pingbo Wen's Blog</title>
-	<meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <head>
+  <title>
+   Pingbo Wen's Blog
+  </title>
+  <meta charset="utf-8">
+   <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="css/global.css" rel="stylesheet">
-    <link href="css/index.css" rel="stylesheet">
-  </head>
-  <body data-pagetype="index">
-	<!-- nav bar -->
-	<div id="nav_hook">
-	  <noscript>
-		<p><b>JavaScript must be enabled in your browser 
-		  to display nav bar contents.</b></p></noscript>
-	</div>
-	<!-- main area -->
-<div class="container">
-	<div class="row-fluid">
-	  <div class="span9">
-<div id="post_toc">
-	  <noscript>
-		<p><b>JavaScript must be enabled in your browser 
-		  to display post lists contents.</b></p></noscript>
-</div>
-<div id="page">
-<ul class="pager">
-  <li><a id="previous" href="javascript:;">Previous</a></li>
-  <li><a id="next" href="javascript:;">Next</a></li>
-</ul>
-</div>
-	  </div>
-	  <div class="span3">
-		<div id="announcement">
-		</div>
-		<div id="top_comment" class="row-fluid">
-		</div>
-	  </div>
-	</div>
-</div>
-	<!-- footer -->
-<div id="footer_hook" class="container">
-  <div id="footer_text" class="pull-right">
-	  <noscript>
-		<p><b>JavaScript must be enabled in your browser 
-		  to display footer contents.</b></p></noscript>
+    <link href="css/bootstrap.min.css" media="screen" rel="stylesheet">
+     <link href="css/global.css" rel="stylesheet">
+      <link href="css/index.css" rel="stylesheet">
+      </link>
+     </link>
+    </link>
+   </meta>
+  </meta>
+ </head>
+ <body data-pagetype="index">
+  <!-- nav bar -->
+  <div id="nav_hook">
+   <noscript>
+    <p>
+     <b>
+      JavaScript must be enabled in your browser 
+		  to display nav bar contents.
+     </b>
+    </p>
+   </noscript>
   </div>
-</div>
-    <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/blog.js"></script>
-  </body>
+  <!-- main area -->
+  <div class="container">
+   <div class="row-fluid">
+    <div class="span9">
+     <div id="post_toc">
+      <noscript>
+       <p>
+        <b>
+         JavaScript must be enabled in your browser 
+		  to display post lists contents.
+        </b>
+       </p>
+      </noscript>
+     </div>
+     <div id="page">
+      <ul class="pager">
+       <li>
+        <a href="javascript:;" id="previous">
+         Previous
+        </a>
+       </li>
+       <li>
+        <a href="javascript:;" id="next">
+         Next
+        </a>
+       </li>
+      </ul>
+     </div>
+    </div>
+    <div class="span3">
+     <div id="announcement">
+     </div>
+     <div class="row-fluid" id="top_comment">
+     </div>
+    </div>
+   </div>
+  </div>
+  <!-- footer -->
+  <div class="container" id="footer_hook">
+   <div class="pull-right" id="footer_text">
+    <noscript>
+     <p>
+      <b>
+       JavaScript must be enabled in your browser 
+		  to display footer contents.
+      </b>
+     </p>
+    </noscript>
+   </div>
+  </div>
+  <script src="http://code.jquery.com/jquery.js">
+  </script>
+  <script src="js/bootstrap.min.js">
+  </script>
+  <script src="js/blog.js">
+  </script>
+ </body>
 </html>
-
