--- a/server/article/Embedded System/qemu_arm_blog/qemu_arm_blog.html
+++ b/server/article/Embedded System/qemu_arm_blog/qemu_arm_blog.html
@@ -1,3 +1,4 @@
+<!-- 利用qemu模拟嵌入式系统制作全过程 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +7,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>利用qemu模拟嵌入式系统制作全过程</title>
+<title>利用qemu模拟嵌入式系统制作全过程 - Pingbo Wen's Blog</title>
 <link href="http://202.201.0.164/blog/css/bootstrap.min.css" rel="stylesheet" media="screen">
 <link href="http://202.201.0.164/blog/css/global.css" rel="stylesheet">
 <link href="http://202.201.0.164/blog/css/article.css" rel="stylesheet">
@@ -491,7 +492,7 @@ http://www.gnu.org/software/src-highlite -->
 
 <div id="footer_hook" class="container">
 <div id="footer_text" class="pull-right">
-Last updated 2013-11-10 11:35:51 CST
+Last updated 2013-11-20 22:52:54 CST
 <br />
 </div>
 </div>
