expand article comment width in small backend
Signed-off-by: WEN Pingbo <wengpingbo@gmail.com>

--- a/server/article/c-faq/static_variable_function/static_variable_function.html
+++ b/server/article/c-faq/static_variable_function/static_variable_function.html
@@ -68,7 +68,7 @@ http://www.gnu.org/software/src-highlite -->
 </div>
 </div>
 <div id="footnotes" class="span9 pull-right"><hr></div>
-<div id="article_comment" class="span9 pull-right"></div>
+<div id="article_comment"></div>
 </div> <!-- row-fluid -->
 </div> <!-- container -->
 
